# Freya_Travel

./: README.md
travel-agent-api/: .gitignore  pyproject.toml  test_agent.py
travel-agent-api/src/travel_agent_api/: main.py
travel-agent-api/src/travel_agent_api/routes/: chat_route.py
travel-agent-api/src/travel_agent_api/services/: agent_service.py
travel-agent-api/src/travel_agent_api/tools/: chain_historical_expert.py  chain_travel_plan.py  destination_guide.py  flights_finder.py  hotels_finder.py  images_finder.py  itinerary_with_images.py
web_TravelAgent/: package-lock.json
web_TravelAgent/app/Livewire/: Chatbot.php
web_TravelAgent/resources/css/: style.css
web_TravelAgent/resources/js/: app.js
web_TravelAgent/resources/views/components/: layout.blade.php  markdown.blade.php  sidebar.blade.php
web_TravelAgent/resources/views/documents/: index.blade.php
web_TravelAgent/resources/views/livewire/: chatbot.blade.php
